# RBDOOM-3-BFG

./: .gitignore
doc/: notes.txt
doc/examples/: ffmpeg_decoding_encoding.c
neo/: CMakeLists.txt
neo/cmake/: FindFFMPEG.cmake
neo/d3xp/: Misc.cpp  PlayerView.cpp
neo/framework/: Common.cpp  Common_load.cpp  Licensee.h  common_frame.cpp
neo/idlib/: precompiled.h
neo/idlib/math/: Simd.h  Simd_Generic.cpp  Simd_Generic.h
neo/idlib/sys/: sys_defines.h
neo/libs/ffmpeg/doc/examples/: decoding.c
neo/renderer/: AutoRenderBink.cpp  Cinematic.cpp  tr_backend_draw.cpp
neo/sound/: snd_local.h
neo/sound_legacy/: WaveFile.h  snd_cache.cpp  snd_decoder.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_wavefile.cpp  snd_world.cpp  sound.h
neo/sys/win32/: win_snd.cpp
neo/test/: CMakeLists.txt  ffmpeg_decode.c
